--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/RegistroMM/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro MM</title>
+    <script type="text/javascript">
+      // Configuração para o GitHub Pages
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/RegistroMM/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
