--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro MM</title>
+    <script>
+      // Verifica se há um redirecionamento salvo na sessão
+      (function() {
+        var redirect = sessionStorage.getItem('redirect');
+        if (redirect && redirect !== window.location.href) {
+          // Limpa o redirecionamento salvo
+          sessionStorage.removeItem('redirect');
+          // Extrai o caminho do redirecionamento
+          var url = new URL(redirect);
+          var path = url.pathname.split('/').slice(2).join('/');
+          // Navega para o caminho correto usando o hash router
+          if (path) {
+            window.location.replace(window.location.origin + window.location.pathname + '#/' + path);
+          }
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
