--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>Redirecionando...</title>
   <script>
     // Redirecionamento simples para a página principal
-    window.location.replace('/RegistroMM/');
+    window.location.replace('https://charlestpaquino.github.io/RegistroMM/');
   </script>
 </head>
 <body>
