--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/RegistroMM/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://hzvxhnyutxqcixfteygs.supabase.co; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' https://hzvxhnyutxqcixfteygs.supabase.co wss://hzvxhnyutxqcixfteygs.supabase.co;">
     <title>Registro MM</title>
     <script>
       // Polyfill para localStorage quando não estiver disponível (como em iframes com restrições)
@@ -32,6 +33,21 @@
           writable: false
         });
       }
+    </script>
+    <!-- Código para lidar com rotas no GitHub Pages -->
+    <script type="text/javascript">
+      // Código para garantir que o GitHub Pages funcione com rotas do React Router
+      (function() {
+        // Se não estamos no GitHub Pages, não fazemos nada
+        if (window.location.hostname !== 'charlestpaquino.github.io') return;
+        
+        // Verificamos se estamos em uma rota que não seja a raiz
+        const path = window.location.pathname.replace('/RegistroMM', '');
+        if (path !== '/' && path !== '') {
+          // Redirecionamos para a raiz com hash
+          window.location.replace('/RegistroMM/#' + path);
+        }
+      })();
     </script>
     <script type="module" crossorigin src="/RegistroMM/assets/index.a2207076.js"></script>
     <link rel="stylesheet" href="/RegistroMM/assets/index.4d07a41d.css">
