--- a/index.html
+++ b/index.html
@@ -2,9 +2,50 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/RegistroMM/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://hzvxhnyutxqcixfteygs.supabase.co; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' https://hzvxhnyutxqcixfteygs.supabase.co wss://hzvxhnyutxqcixfteygs.supabase.co;">
     <title>Registro MM</title>
+    <script>
+      // Polyfill para localStorage quando não estiver disponível
+      try {
+        window.localStorage.getItem('test');
+      } catch (e) {
+        console.log('Criando polyfill para localStorage');
+        var memoryStorage = {};
+        Object.defineProperty(window, 'localStorage', {
+          value: {
+            setItem: function(key, value) {
+              memoryStorage[key] = value;
+            },
+            getItem: function(key) {
+              return memoryStorage[key] || null;
+            },
+            removeItem: function(key) {
+              delete memoryStorage[key];
+            },
+            clear: function() {
+              memoryStorage = {};
+            }
+          },
+          writable: false
+        });
+      }
+    </script>
+    <!-- Código para lidar com rotas no GitHub Pages -->
+    <script type="text/javascript">
+      (function() {
+        // Se não estamos no GitHub Pages, não fazemos nada
+        if (window.location.hostname !== 'charlestpaquino.github.io') return;
+        
+        // Verificamos se estamos em uma rota que não seja a raiz
+        const path = window.location.pathname.replace('/RegistroMM', '');
+        if (path !== '/' && path !== '') {
+          // Redirecionamos para a raiz com hash
+          window.location.replace('/RegistroMM/#' + path);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
